# flashcards-cpp-qt

./: .gitignore  CMakeLists.txt  flashcards.db
.devcontainer/: Dockerfile
.github/workflows/: cmake-single-platform.yml
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/domain/: Deck.h  Flashcard.h
src/gui/: MainWindow.cpp  MainWindow.h
src/repositories/: DeckRepository.cpp  DeckRepository.h  FlashcardRepository.cpp  FlashcardRepository.h
